WebCore: 'transparent' should be a valid color https://bugs.webkit.org/show_bug.cgi?id=45482

Reviewed by Andreas Kling.

Test: svg/animations/svg-animate-color-transparent.svg

Based on previous work by Jan Erik Hanssen  <jhanssen@codeaurora.org>

* platform/ColorData.gperf: Added 'transparent' to the list of colors.
Added the alpha to all the colors as it was needed to support the new color.

* platform/graphics/Color.cpp:
(WebCore::Color::Color):
(WebCore::Color::setNamedColor): Avoid setting the alpha as now it is not
always 0xFF.

LayoutTests: Test for: 'transparent' should be a valid color
https://bugs.webkit.org/show_bug.cgi?id=45482

Reviewed by Andreas Kling.

Test that animation works with 'transparent' as they check the validity of the
color.

* svg/animations/svg-animate-color-transparent-expected.txt: Added.
* svg/animations/svg-animate-color-transparent.svg: Added.

Canonical link: https://commits.webkit.org/60503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69937 268f45cc-cd09-0410-ab3c-d52691b4dbfc